--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -115,7 +115,8 @@ DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 +ActiveGameNameRedirects=(OldGameName="TP_ME_BlankBP",NewGameName="/Script/ARRender")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ME_BlankBP",NewGameName="/Script/ARRender")
 bUseFixedFrameRate=True
-FixedFrameRate=50.000000
+FixedFrameRate=30.000000
+GenerateDefaultTimecodeFrameRate=(Numerator=30,Denominator=1)
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
